# Document_Scanner_USing_OpenCv

./: CMakeLists.txt  README.md  documentScanner.cpp
